--- a/src/style.css
+++ b/src/style.css
@@ -2,35 +2,31 @@
 @tailwind components;
 @tailwind utilities;
 
-*{
-    box-sizing: border-box;
+* {
+  box-sizing: border-box;
 }
 
-body{
-    margin:0;
+body {
+  margin: 0;
 }
 
-.main-icon{
-    content: url('./asserts/img/tick-mark-green.png');
+.main-icon {
+  content: url("./asserts/img/tick-mark-green.png");
 }
 
-.title-icon{
-    content: url('./asserts/img/icons8-double-tick-16.png');
+.content-div span p {
+  color: #fffef0;
 }
 
-.content-div span p{
-    color: #FFFEF0;
-}
-
-.card:hover{
-    filter: drop-shadow(1px 2px 2px rgb(144 238 144/0.7));
+.card:hover {
+  filter: drop-shadow(1px 2px 2px rgb(144 238 144/0.7));
 }
 /* title */
 
-.title{
-    font-family: 'Vina Sans', sans-serif;
+.title {
+  font-family: "Vina Sans", sans-serif;
 }
 
-dialog::backdrop{
-    background: rgba(51,51,51,0.8);
+dialog::backdrop {
+  background: rgba(51, 51, 51, 0.8);
 }
